// Copyright 2023 Minsoo Cheong
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package com.example.keyword;

option java_package = "io.github.mscheong01.keyword";
option java_multiple_files = true;

message KeywordMessage {
  string in = 1;
  string fun = 2;
  string if = 3;
  string object = 4;
  oneof as {
    string typeof = 6;
    string while = 7;
  }
  repeated string for = 8;
  map<string, string> else = 9;
  string public = 10;
  string package = 11;
}

message ProtobufJavaEscapedFieldMessage {
  string class = 1;
}

message ProtobufJavaEscapedRepeatedMessage {
  repeated string class = 1;
}

message ProtobufJavaEscapedMapMessage {
  map<string, string> class = 1;
}

message ProtobufJavaEscapedOneOfMessage {
  oneof class {
    string name = 1;
  }
}

message ProtobufJavaEscapedOneOfFieldMessage {
  oneof name {
    string class = 1;
  }
}

//message ProtobufJavaEscapedEnumMessage {
//  enum class {
//    UNKNOWN = 0;
//    ENGINEER = 1;
//    PRODUCT_MANAGER = 2;
//  }
//}
